<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">多多优社</string>
    <string name="edit_password_tip">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_register"><![CDATA[去注册>]]></string>
    <string name="login">登录</string>
    <string name="edit_mobile_or_password_tip">请输入正确的用户名或密码</string>
    <string name="edit_code_tip">请输入正确的验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="edit_password_reg">请输入密码(6-14位)</string>
    <string name="user_agreement">用户协议</string>
    <string name="go_login"><![CDATA[去登录>]]></string>
    <string name="register">注册</string>
    <string name="edit_mobile_tip">请输入正确的手机号</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="contact_search">搜索</string>
    <string name="contact_select">选择</string>
    <string name="search_hint">昵称/手机号</string>
    <string name="search_hint_nick">昵称</string>
    <string name="search_hint_user">手机号/ID</string>
    <string name="country_select_head">选择国家和地区代码</string>
    <string name="edit_agreement_tip">请同意用户协议</string>
    <string name="edit_new_password_reg">填写新的密码</string>
    <string name="commit">提交</string>
    <string name="remark">消息</string>
    <string name="send_group_chat">发起群聊</string>
    <string name="invite_friends">邀请好友</string>
    <string name="scan">扫一扫</string>
    <string name="collection_and_payment">收款</string>
    <string name="select_contacts">选择联系人</string>
    <string name="main_customer">意见反馈</string>
    <string name="de_actionbar_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="change_language">切换语言</string>
    <string name="zh_cn">简体中文</string>
    <string name="zh_tw">繁体中文</string>
    <string name="en_us">English</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="permission_banned">为了您的体验，请您授权所需的的权限</string>
    <string name="setting">去授权</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_friend_title_bar">添加联系人</string>
    <string name="m_add_friend_search_edit">输入手机号/多多号</string>
    <string name="m_add_friend_label_qr_code">我的二维码名片</string>
    <string name="m_add_friend_wechat_label_1">微信好友</string>
    <string name="m_add_friend_wechat_label_2">添加微信中的联系人</string>
    <string name="m_add_friend_contact_label_1">手机联系人</string>
    <string name="m_add_friend_contact_label_2">添加通讯录中的联系人</string>
    <string name="m_add_friend_scan_it_label_1">扫一扫</string>
    <string name="m_add_friend_scan_it_label_2">扫一扫二维码名片</string>
    <string name="m_information_title_bar">个人信息</string>
    <string name="m_personal_information_signature_label">个性签名</string>
    <string name="m_personal_information_signature_text">添加到通讯录</string>
    <string name="m_verification_title_bar">验证申请</string>
    <string name="m_verification_label">你需要发送验证申请，等待对方通过</string>
    <string name="m_verification_send_btn">发送</string>
    <string name="m_qr_code_title_bar">相册</string>
    <string name="m_qr_code_title_bar_me">我的二维码</string>
    <string name="m_my_qr_code_label">扫描二维码，加我为好友</string>
    <string name="m_contact_title_bar">手机联系人</string>
    <string name="m_item_contact_type_text">已添加</string>
    <string name="m_item_contact_type_text_1">申请添加</string>
    <string name="m_constacts_new_friend_title_bar">通讯录</string>
    <string name="m_constacts_new_friend_group_chat_label">群聊</string>
    <string name="m_contact_add_friend_label">新的好友</string>
    <string name="m_contact_new_friend_label">添加好友</string>
    <string name="m_contact_search_label">搜索</string>
    <string name="m_fragment_new_friend_title_bar">新的朋友</string>
    <string name="m_fragment_chat_information_title_bar">聊天信息</string>
    <string name="m_chat_information_add_member">添加新成员</string>
    <string name="label">置顶聊天</string>
    <string name="label_1">消息免打扰</string>
    <string name="m_chat_information_chat_and_picture_text">聊天文件与图片</string>
    <string name="m_chat_information_find_chat_history_label">查找聊天记录</string>
    <string name="m_chat_information_set_current_time_text">设置当前时间</string>
    <string name="m_dialog_account_freeze_caveat_text">很抱歉、您的多多账户已被冻结,\n 如有疑问或冻结、请联系人工客服。</string>
    <string name="m_dialog_account_freeze_phone_number">客服电话：181-3992-9960</string>
    <string name="m_edit_information_title_bar">编辑个人信息</string>
    <string name="m_edit_information_area_label">地区</string>
    <string name="m_edit_information_name_edit">例如：小明</string>
    <string name="m_edit_information_area_edit">完善你的位置信息</string>
    <string name="m_edit_information_name_label">昵称</string>
    <string name="m_edit_information_btn">完成</string>
    <string name="m_set_payment_pwd_title_bar">设置支付密码</string>
    <string name="m_set_payment_pwd_label">为了您的账户安全，请设置支付密码</string>
    <string name="code_label">验证码已经发送，请注意查收</string>
    <string name="m_delete_popup">删除</string>
    <string name="m_deleter_friend_cancel">取消</string>
    <string name="m_people_information_phone_label">手机</string>
    <string name="m_people_information_email_label">邮箱</string>
    <string name="m_people_information_signature_label">个性签名</string>
    <string name="m_people_information_wallet_address_label">钱包地址</string>
    <string name="m_people_information_send_to_message">发消息</string>
    <string name="m_people_information_voice_calls">语音通话</string>
    <string name="update_rename">修改备注</string>
    <string name="recommend_to_friend">推荐给好友</string>
    <string name="m_delete_friend_constant">删除联系人</string>
    <string name="m_delete_friend_label">将联系人“%1$s”，删除，同时删除与该联系人的聊天记录</string>
    <string name="m_cancel_btn">取消</string>
    <string name="m_modify_notes_title_bar">备注</string>
    <string name="m_modify_notes_right_title_bar">确定</string>
    <string name="m_group_chat">群聊</string>
    <string name="enter_group_chat">输入群名</string>
    <string name="sign">个性签名</string>
    <string name="hint_sign">请输入个性签名</string>
    <string name="nick">昵称</string>
    <string name="hint_nick">请输入昵称</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="authen_true">已认证</string>
    <string name="authen_false">暂未认证</string>
    <string name="none">暂无</string>
    <string name="update_head_portrail">更新头像成功</string>
    <string name="input_empty">请输入内容</string>
    <string name="verify_pwd1">请输入正确原密码</string>
    <string name="verify_pwd2">请输入正确新密码</string>
    <string name="verify_pwd3">两次密码输入不一致</string>
    <string name="exchange1_sale1">出售币种</string>
    <string name="exchange1_sale2">出售数量</string>
    <string name="exchange1_sale3">出售总金额</string>
    <string name="exchange1_sale4">收款方式</string>
    <string name="exchange1_sale5">一键出售</string>
    <string name="exchange1_buy1">购买币种</string>
    <string name="exchange1_buy2">购买数量</string>
    <string name="exchange1_buy3">需支付金额</string>
    <string name="exchange1_buy4">支付方式</string>
    <string name="exchange1_buy5">一键购买</string>
    <string name="paytype">支付方式</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="bankcard">银行卡</string>
    <string name="sale_success">下单成功</string>
    <string name="select_count_tips">请输入数量</string>
    <string name="select_buytype_tips">请选择支付方式</string>
    <string name="select_saletype_tips">请选择至少一种收款方式</string>
    <string name="choosecount">请输入数量</string>
    <string name="m_red_envelopes_title_text">发红包</string>
    <string name="m_red_envelopes_title_right_text">红包记录</string>
    <string name="m_red_envelopes_single_amount_label">单个金额</string>
    <string name="m_red_envelopes_unit_label">HK</string>
    <string name="m_red_envelopes_label">鸿运当头，大吉大利</string>
    <string name="m_red_envelopes_money_text">0.00</string>
    <string name="m_red_envelopes_commit_btn">塞进红包</string>
    <string name="m_transfer_title_bar">转账</string>
    <string name="m_transfer_money_label">转账金额</string>
    <string name="m_transfer_add_instructions">添加转账说明</string>
    <string name="m_transfer_commit_btn">确认转账</string>
    <string name="m_successful_transfer_title_bar">转账详情</string>
    <string name="m_successful_transfer_label">转账成功</string>
    <string name="m_successful_transfer_text">待好友爱吃水果确认收款</string>
    <string name="m_successful_transfer_money_text">5000</string>
    <string name="m_successful_transfer_commit">完成</string>
    <string name="m_transfer_pending_user">待王小二确认领取</string>
    <string name="m_transfer_pending_money_text">500</string>
    <string name="m_transfer_pending_return_text">24小时内对方未确认，将退还给你。</string>
    <string name="m_transfer_pending_time_text">转账时间：2019-03-02 11：11</string>
    <string name="m_transfer_info_pending_payment_text">待收款</string>
    <string name="m_transfer_info_commit_btn">确认</string>
    <string name="m_transfer_info_caveat_text">24小时内未确认，将退还给对方</string>
    <string name="m_transfer_received_text">已领取</string>
    <string name="m_transfer_received_time_text">转账时间：2019-03-02 11：11</string>
    <string name="m_transfer_received_icon_time_label">收账时间：2019-03-02 12：12</string>
    <string name="m_red_envelopes_user">爱吃水果的红包</string>
    <string name="m_red_envelopes_signature_text">鸿运当头，大吉大利</string>
    <string name="m_transfer_unaccalimed_text">红包金额50HK,等待对方领取</string>
    <string name="m_expired_envelopes_text">红包已过期</string>
    <string name="m_expired_envelopes_info">查看领取详情 ></string>
    <string name="m_envelopes_text">1个红包共50HK</string>
    <string name="m_received_envelopes_text">包子</string>
    <string name="m_received_envelopes_time_text">2-19 16：22</string>
    <string name="m_received_envelopes_money_text">50HK</string>
    <string name="m_envelopes_recording_title_bar">红包记录</string>
    <string name="m_income_user_name_text">周晓瑞共收到</string>
    <string name="m_income_money_text">0.00</string>
    <string name="m_income_count_text">共收到50个红红包</string>
    <string name="m_item_recording_user_name_text">爱吃水果</string>
    <string name="m_add_my_way_title_bar">添加我的方式</string>
    <string name="m_add_my_way_duoduo_id">多多号</string>
    <string name="m_add_my_way_phone_id">手机号</string>
    <string name="m_add_my_way_group_chat_text">群聊</string>
    <string name="m_add_my_way_qrcode_text">二维码</string>
    <string name="m_add_my_way_business_carde_text">名片</string>
    <string name="user_name">周晓瑞</string>
    <string name="account_number">账号</string>
    <string name="help_center">帮助中心</string>
    <string name="switch_account">切换账号</string>
    <string name="total_amount">总金额</string>
    <string name="prompt_label">拼手气红包，抢到的金额随机不等</string>
    <string name="number_of_red_packets">红包个数</string>
    <string name="fill_in_the_number">填写个数</string>
    <string name="fill_in_the_number_unit">个</string>
    <string name="group_total_people">本群共22个人</string>
    <string name="new_message">新消息通知</string>
    <string name="intimacy">隐私</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="collection_information">收款信息</string>
    <string name="not_perfection">未完善</string>
    <string name="not_verify_real_name">未认证</string>
    <string name="feedback">意见反馈</string>
    <string name="about_duo_duo">关于多多</string>
    <string name="language_switch">语言切换</string>
    <string name="online_customer_service">在线客服</string>
    <string name="logout">退出</string>
    <string name="popnearby_onlygirl">只看女生</string>
    <string name="popnearby_onlyboy">只看男生</string>
    <string name="popnearby_all">查看全部</string>
    <string name="popnearby_clear">清除位置并退出</string>
</resources>