<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_bg_press"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/total_amount"
            android:textColor="@color/themecolor"
            android:textSize="16sp" />

        <EditText
            style="?attr/checkedTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="45dp"
            android:background="@null"
            android:hint="@string/m_income_money_text"
            android:textColor="@color/about_version_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/m_red_envelopes_unit_label"
            android:textColor="@color/themecolor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="7dp"
        android:text="@string/prompt_label"
        android:textColor="@color/m_item_msg_session_label"
        android:textSize="13sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/number_of_red_packets"
            android:textColor="@color/themecolor"
            android:textSize="16sp" />

        <EditText
            style="?attr/checkedTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="45dp"
            android:background="@null"
            android:hint="@string/fill_in_the_number"
            android:textColor="@color/about_version_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fill_in_the_number_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_in_the_number_unit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="15dp"
            android:textColor="@color/themecolor"
            android:textSize="16sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:text="@string/group_total_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/m_item_msg_session_label"
        android:layout_marginStart="27dp"
        android:layout_marginTop="7dp"
        />
    <TextView
        android:layout_marginTop="8dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:paddingStart="15dp"
        android:textSize="16sp"
        android:textColor="@color/themecolor"
        android:background="@color/white"
        android:text="@string/m_red_envelopes_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="24dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/total_money"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:text="@string/m_red_envelopes_money_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/total_unit"
            android:textSize="25sp"
            android:textColor="@color/m_red_envelopes_unit_text"
            android:text="@string/m_red_envelopes_unit_label"
            app:layout_constraintBottom_toBottomOf="@+id/total_money"
            app:layout_constraintStart_toEndOf="@+id/total_money"
            android:layout_width="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:paddingTop="17dp"
        android:paddingBottom="17dp"
        android:textColor="@color/themecolor"
        android:background="@drawable/shape_bac_normal"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:text="@string/m_red_envelopes_commit_btn"
        android:layout_marginTop="27dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>