<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title_back" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F8F8F8"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_account_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/account_number" />

                <ImageView style="@style/ImageEnter" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_newMessage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white"
                android:visibility="gone">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/new_message" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_intimacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white"
                android:visibility="gone">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/intimacy" />

                <ImageView style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_realNameAuthentication"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/real_name_authentication" />

                <TextView
                    android:id="@+id/tv_authentication"
                    style="@style/textStyle1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/iv_authentication"
                    android:text="@string/not_verify_real_name" />

                <ImageView
                    android:id="@+id/iv_authentication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/iv_enter"
                    android:src="@drawable/ic_mine_authenticate"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_enter"
                    style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_collectionInformation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/collection_information" />

                <TextView
                    android:id="@+id/tv_perfection"
                    style="@style/textStyle1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/iv_enter1"
                    android:text="@string/not_perfection" />

                <ImageView
                    android:id="@+id/iv_enter1"
                    style="@style/ImageEnter" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_helpCenter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/help_center" />

                <ImageView style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_feedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/feedback" />

                <ImageView style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_aboutDuoDuo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/about_duo_duo" />

                <ImageView style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_languageSwitch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white"
                android:visibility="gone">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/language_switch" />

                <ImageView style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_onlineCustomerService"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/online_customer_service" />

                <ImageView style="@style/ImageEnter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_switchAccount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.1dp"
                android:background="@android:color/white"
                android:visibility="gone">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/switch_account" />

                <TextView
                    android:id="@+id/tv_nickName"
                    style="@style/textStyle"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/iv_enter2" />

                <ImageView
                    android:id="@+id/iv_enter2"
                    style="@style/ImageEnter" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:background="@android:color/white">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/logout" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
